remove old files
removed old file version and tweaked css for color/spacing in navbar and contact section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a class="page-scroll" href="#bio">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#resume">Services</a>
+                        <a class="page-scroll" href="#resume">Resume</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -81,7 +81,7 @@
           <div class="col-lg-2"></div>
             <div class="col-lg-8">
             <h1 class="bio-head">Short Bio</h1>
-              <p>I studied BS, followed by an MS, in Chemical Engineering at Mississippi State University. I am a self-taught programmer and have taken the opportunity to learn new skills for Web Development, completing courses on Codecademy and putting those skills to use.</p>
+              <p>I received a BS in Chemical Engineering from Mississippi State University and an MS in Chemical Engineering from Mississippi State University. I am a self-taught programmer and have taken the opportunity to learn new skills for Web Development, completing courses on Codecademy and putting those skills to use.</p>
   
               <p>I am very passionate about tinkering with technology, detailing cars, and staying active. I am happy to use my computer skills to help family and friends with tech questions<!-- and look for ways to help others reduce their workload through automation-->.</p>
             </div>
@@ -255,40 +255,32 @@
         <div class="col-lg-2"></div>
           <div class="col-lg-8">
             <h1 class="contact-head">Contact Me</h1>
-            <form role="form" id="contact-form" class="contact-form" method="post" action="assets/php/contact.php">
+            <!--<form role="form" id="contact-form" class="contact-form" method="post" action="assets/php/contact.php">-->
   
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input type="text" name="name" class="form-control" autocomplete="off" id="form_name" placeholder="First Name *" required="required" data-error="Firstname is required.">
-                    <div class="help-block with-errors"></div>
-                  </div>
-                  </div>
-
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <input type="text" name="surname" class="form-control" autocomplete="off" id="form_lastname" placeholder="Last Name *" required="required" data-error="Lastname is required.">
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
+              <div class="row, contacts">
+                <div class="col-md-3">
+                  <address>
+                    <a href="mailto:dtk28@icloud.com">dtk28@icloud.com</a><br>
+                  </address>
                 </div>
 
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <input type="tel" name="tel" class="form-control" autocomplete="off" id="form_tel" placeholder="Phone Number *" required="required" data-error="Valid phone number is required.">
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <input type="email" name="email" class="form-control" autocomplete="off" id="form_email" placeholder="E-mail *" required="required" data-error="Valid email is required.">
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
+                <div class="col-md-3">
+                  <address>
+                    <a href="tel:+18329302191">(832) 930-2191</a>
+                  </address>
                 </div>
 
+                <div class="col-md-3">
+                  <a href="https://www.linkedin.com/in/daniel-krizak-6ab025115" target="_blank">LinkedIn</a><br>
+                </div>
+
+                <div class="col-md-3">
+                  <a href="https://github.com/dtkrizak" target="_blank">GitHub</a><br>
+                </div>
+              </div>
+
+                <!--
+                  
                 <div class="row">
                   <div class="col-lg-12">
                     <div class="form-group">
@@ -307,6 +299,8 @@
                 </form>
               </div>
               <div class="col-lg-2"></div>
+
+                -->
           </div>
           
         </div>
