--- a/index.html
+++ b/index.html
@@ -81,9 +81,12 @@
           <div class="col-lg-2"></div>
             <div class="col-lg-8">
             <h1 class="bio-head">Short Bio</h1>
-              <p>I received a BS in Chemical Engineering from Mississippi State University and an MS in Chemical Engineering from Mississippi State University. I am a self-taught programmer and have taken the opportunity to learn new skills for Web Development, completing courses on Codecademy and putting those skills to use.</p>
+              <p>I received a BS in Chemical Engineering and an MS in Chemical Engineering from Mississippi State University. 
+                I am a self-taught programmer and have taken the opportunity to learn new skills for Web Development, completing 
+                courses on Codecademy and putting those skills to use.</p>
   
-              <p>I am very passionate about tinkering with technology, detailing cars, and staying active. I am happy to use my computer skills to help family and friends with tech questions<!-- and look for ways to help others reduce their workload through automation-->.</p>
+              <p>I am very passionate about tinkering with technology, detailing cars, and staying active. I am happy to 
+                use my computer skills to help family and friends with tech questions and am always looking for ways to leverage technology.</p>
             </div>
             <div class="col-lg-2"></div>
           </div>
@@ -145,7 +148,8 @@
         <li data-date="01/03/2012">
           <h1>HP Code Wars</h1>
           <em>March 2012</em>
-          <p>Joined a group of programmers in high school to compete in HP Code Wars. Though we didn't win, this helped to pique my interest further.
+          <p>Joined a group of programmers in high school to compete in HP Code Wars. Though we didn't win, this helped 
+            to pique my interest further.
           </p>
         </li>
   
@@ -190,7 +194,7 @@
             Took a course in Advanced Process Computations, where the final project involved constructing a basic
              molecular dynamics simulation of 200 molecules of Argon using FORTRAN.
             <a href="https://github.com/dtkrizak/MD-project" target="_blank">(Project available on GitHub)</a>
-            This FORTRAN project reignited the passion for coding, leading to the implementation of more coding/automation
+            This project reignited the passion for coding, leading to the implementation of more coding/automation
              in my graduate research project.
           </p>
         </li>
@@ -200,8 +204,8 @@
             <em>August, 2017</em>
             <p> 
               Took the course Numerical Methods for Chemical Engineering Applications, where various mathematical 
-              techniques, such as the Runge-Kutta method, were applied to systems such as a continuously stirred 
-              tank reactor (CSTR) using FORTRAN.
+              techniques, such as the Runge-Kutta method, were applied to different systems, such as a continuously stirred 
+              tank reactor (CSTR), using FORTRAN.
               <a href="https://github.com/dtkrizak/numerical-methods" target="_blank">(Example project on GitHub)</a>
             </p>
           </li>
@@ -230,7 +234,7 @@
             <h1>Thermodynamics Calculations</h1>
             <em>May, 2019</em>
             <p>
-              As part of my Research Assistanceship, I was tasked with calculating thermodynamic variables of different molecules.
+              As part of my Research Assistanceship, I was tasked with calculating thermodynamic properties of different molecules.
                In lieu of calculating these by hand, I created a FORTRAN program to do the work. After creating the program, 
                others on the project decided it would be more useful to have the program in Python, so I learned Python and 
                translated the program.
@@ -255,7 +259,6 @@
         <div class="col-lg-2"></div>
           <div class="col-lg-8">
             <h1 class="contact-head">Contact Me</h1>
-            <!--<form role="form" id="contact-form" class="contact-form" method="post" action="assets/php/contact.php">-->
   
               <div class="row, contacts">
                 <div class="col-md-3">
@@ -279,28 +282,6 @@
                 </div>
               </div>
 
-                <!--
-                  
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="form-group">
-                      <textarea class="form-control textarea" rows="5" name="message" id="form_message" placeholder="Message *" required="required" data-error="Please, leave me a message."></textarea>
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-lg-12">
-                    <p class="text-muted"> <strong>*</strong> These fields are required.</p>
-                    <button type="submit" class="btn main-btn pull-right" value="Send Message">Send a Message</button>
-                  </div>
-                </div>
-                </form>
-              </div>
-              <div class="col-lg-2"></div>
-
-                -->
           </div>
           
         </div>
@@ -319,12 +300,6 @@
     <script type="text/javascript" src="assets/js/scrolling-nav.js"></script>
     <script type="text/javascript" src="assets/js/timeline.js"></script>
     <script type="text/javascript" src="assets/js/jquery.mobile.custom.min.js"></script>
-    <script type="text/javascript" src="assets/js/validate.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.js"></script>
-    <script type="text/javascript" src="assets/js/contact.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js" integrity="sha256-dHf/YjH1A4tewEsKUSmNnV05DDbfGN3g7NMq86xgGh8=" crossorigin="anonymous"></script>
-
-    <
 
   </body>
 </html>
