--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Daniel T. Krizak</h1>
-                    <h3>Recent Graduate Seeking Positions in Web/Software Development</h3> 
+                    <h3>Web and Software Development</h3> 
                     <a class="btn btn-default page-scroll" href="#bio">Short Bio</a>
                 </div>
             </div>
@@ -81,12 +81,12 @@
           <div class="col-lg-2"></div>
             <div class="col-lg-8">
             <h1 class="bio-head">Short Bio</h1>
-              <p>I received a BS in Chemical Engineering and an MS in Chemical Engineering from Mississippi State University. 
-                I am a self-taught programmer and have taken the opportunity to learn new skills for Web Development, completing 
-                courses on Codecademy and putting those skills to use.</p>
+              <p>I have earned both a Bachelors and a Masters in Chemical Engineering from Mississippi State University. 
+                I am a self-taught programmer and have taken the opportunity to learn new skills for Web Development by completing 
+                courses on Codecademy and Khan Academy.</p>
   
-              <p>I am very passionate about tinkering with technology, detailing cars, and staying active. I am happy to 
-                use my computer skills to help family and friends with tech questions and am always looking for ways to leverage technology.</p>
+              <p>In the midst of completing my graduate degree, I discovered the part of my project that I enjoyed most was using my coding skills to develop automated tasks in the lab. I've always been happy to 
+               to help family and friends with tech questions and am always looking for ways to leverage the use of technology in my everyday life.</p>
             </div>
             <div class="col-lg-2"></div>
           </div>
@@ -106,7 +106,9 @@
               <li><a href="#0" data-date="01/08/2008" class="selected">Aug 2008</a></li>
              -->
             <li><a href="#0" data-date="01/08/2011" class="selected">Aug 2011</a></li>
+            <!-- Removed 
             <li><a href="#0" data-date="01/03/2012">Mar 2012</a></li>
+            -->
             <li><a href="#0" data-date="01/08/2012">Aug 2012</a></li>
             <li><a href="#0" data-date="01/08/2014">Aug 2014</a></li>
             <li><a href="#0" data-date="01/05/2015">May 2015</a></li>
@@ -141,23 +143,24 @@
         <li class="selected" data-date="01/08/2011">
           <h1>Started Coding</h1>
           <em>August, 2011</em>
-          <p>Took a Java course in High School, which helped to ignite my fascination with technology.
+          <p>My first introduction to coding was a Java course I took in high school.
           </p>
         </li>
-  
+        
+        <!-- Removed 
         <li data-date="01/03/2012">
           <h1>HP Code Wars</h1>
           <em>March 2012</em>
-          <p>Joined a group of programmers in high school to compete in HP Code Wars. Though we didn't win, this helped 
-            to pique my interest further.
+          <p>I joined a group of programmers in high school to compete in HP Code Wars. Though we didn't win, it was s great experience to code with others.
           </p>
         </li>
+        -->
   
         <li data-date="01/08/2012">
           <h1>University - Bachelors</h1>
           <em>August, 2012</em>
           <p>
-            Attended Mississippi State University, majoring in Chemical Engineering and putting coding on the backburner.
+            Attended Mississippi State University, majoring in Chemical Engineering. <!--and putting coding on the backburner.-->
           </p>
         </li>
   
@@ -165,7 +168,7 @@
           <h1>Engineering Internship 1</h1>
           <em>August, 2014</em>
           <p> 
-            Interned at ExxonMobil Chemical in Baytown, TX in the Technology Licensing Department.
+            Interned at ExxonMobil Chemical in Baytown, TX in the Technology Licensing Department, assisting on an expansion project.
           </p>
         </li>
   
@@ -173,8 +176,8 @@
           <h1>Engineering Internship 2</h1>
           <em>May, 2015</em>
           <p> 
-            Interned at ExxonMobil Chemical in Baytown, TX in the Slurry Platform / Compounding / Nonwovens
-            Polymers Product & Applications Development Department.
+            Interned at ExxonMobil Chemical in Baytown, TX in the Slurry Platform / Compounding / Non-wovens
+            Polymers Product & Applications Development Department, investigating changes to additives.
           </p>
         </li>
   
@@ -182,8 +185,8 @@
           <h1>University - Doctorate</h1>
           <em>June, 2016</em>
           <p> 
-            Started the PhD program in Chemical Engineering at Mississippi State University, working in a Soft
-             Materials Research Group.
+            Started the PhD program in Chemical Engineering at Mississippi State University, working in a soft
+             materials research group.
           </p>
         </li>
   
@@ -192,9 +195,9 @@
           <em>August, 2016</em>
           <p> 
             Took a course in Advanced Process Computations, where the final project involved constructing a basic
-             molecular dynamics simulation of 200 molecules of Argon using FORTRAN.
+             molecular dynamics simulation of 200 inert molecules using FORTRAN.
             <a href="https://github.com/dtkrizak/MD-project" target="_blank">(Project available on GitHub)</a>
-            This project reignited the passion for coding, leading to the implementation of more coding/automation
+            This project introduced me to FORTRAN, leading to the implementation of more coding/automation
              in my graduate research project.
           </p>
         </li>
@@ -214,7 +217,7 @@
           <h1>Process Automation</h1>
           <em>July, 2018</em>
           <p>
-            Automated the fabrication process for the fabrication of Reverse Osmosis (RO) membranes using LabView, 
+            Automated the fabrication process for Reverse Osmosis (RO) membranes using LabView, 
             modeled after the work by Dr. Edwin P. Chan at the National Institute of Science and Technology.
             <a href="https://github.com/dtkrizak/automatedSpinCoater" target="_blank">(Project available on GitHub)</a> 
             
@@ -225,7 +228,7 @@
           <h1>Data Collection</h1>
           <em>August, 2018</em>
           <p>
-            After fabricating the RO membranes, they are tested and data is collected. I automated this process using a scale, 
+            After fabricating the RO membranes, their perfomance is tested by forcing water through them and calculating the flow rate through the membrane. I automated this process using a scale, 
             Excel, and VBA. <a href="https://github.com/dtkrizak/data-collection-xlsx" target="_blank">(Project available on GitHub)</a>
           </p>
         </li>
@@ -234,10 +237,8 @@
             <h1>Thermodynamics Calculations</h1>
             <em>May, 2019</em>
             <p>
-              As part of my Research Assistanceship, I was tasked with calculating thermodynamic properties of different molecules.
-               In lieu of calculating these by hand, I created a FORTRAN program to do the work. After creating the program, 
-               others on the project decided it would be more useful to have the program in Python, so I learned Python and 
-               translated the program.
+              As part of my Research Assistanceship, I created a FORTRAN program to calculate thermodynamic properties of different molecules.
+               After creating the program, I learned Python to translate it from FORTRAN.
             </p>
           </li>
   
@@ -245,7 +246,7 @@
           <h1>Web Development</h1>
           <em>August, 2020</em>
           <p>
-            During this time I realized that I needed to pursue my passion for coding. I usign tools such as Khan Academy and 
+            During this time I realized that I needed to pursue my passion for coding. I used tools such as Khan Academy and 
             Codecademy to learn HTML/CSS, Javascript and more. 
           </p>
         </li>
