Added comment to timeline.js

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Website | Daniel Krizak</title>
-    <meta name="keywords" content="Entry Level Web developer, software developer, researcher, Mississippi State University,
-    User Interface, User Experience developer, Artificial Intelligence, Machine Learning, Pretoria, ">
+    <meta name="keywords" content="Entry Level Web developer, software developer, researcher, Mississippi State University">
     <meta name="description" content="Daniel T. Krizak is a self-taught web/software developer with a background in Chemical Engineering, looking for any available opportunities to start his career in technology after recently pivoting from the chemical industry.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Raleway:300">
     <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css">
